# pdm-pfsc

./: README.md  pyproject.toml
src/pdm_pfsc/: config.py
